--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     name: Build kernel
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Maximize build space
         uses: easimon/maximize-build-space@master
